# 42sh

./: Doxyfile  Makefile  Makefile.am  Makefile.in  check.sh  config.status  configure  configure.ac  to_ask
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1
src/: 42sh  Makefile  Makefile.am  Makefile.in  a.out  as_input  caca.sh  foo  gcc.sh  lexer.c  lexer.h  main.c  simple seq.sh  test  test.sh  test_input.sh  test_var.sh  tmp_main.c
src/.deps/: 42sh-main.Po
src/builtins/: Makefile  Makefile.am  Makefile.in  builtin.h  echo.c  exit.c  false.c  tmp_dot.c  true.c
src/builtins/.deps/: libbin_a-echo.Po  libbin_a-exit.Po  libbin_a-false.Po  libbin_a-true.Po
src/lexer_parser/: Makefile  Makefile.am  Makefile.in  lexer.c  lexer.h  parser.c  parser.h
src/lexer_parser/ast/: ast.c  ast.h  ast.h.gch
src/lexer_parser/ast/.deps/: liblexpar_a-ast.Po
src/lexer_parser/eval/: eval.c  eval.h  pipe.c  redir.c  token_printer.c
src/lexer_parser/eval/.deps/: liblexpar_a-eval.Po  liblexpar_a-pipe.Po
src/lexer_parser/lexer/: lexer.c  lexer.h  lexer_robin.c  token.h  token_robin.h
src/lexer_parser/lexer/.deps/: liblexpar_a-lexer.Po
src/lexer_parser/parser/: parser.c  parser.h  parser_ref.c  parser_utils.c  parser_utils.h
src/lexer_parser/parser/.deps/: liblexpar_a-parser.Po  liblexpar_a-parser_utils.Po
src/utils/: Makefile  Makefile.am  Makefile.in  a.out  file_to_string.c  file_to_string.h  main.c  token_utils.c  token_utils.h  variable.c  variable.h
src/utils/.deps/: libutils_a-file_to_string.Po  libutils_a-token_utils.Po  libutils_a-variable.Po
tests/: Makefile  Makefile.am  Makefile.in  caca.sh  redir.txt  skeleton.sh  test  test.sh
tests/categories/echo/: command1.sh  command3.sh  in4  inputlots.sh  simple1.sh
tests/categories/mass_produce/: 2 ifs.sh  2 nl between echo.sh  2_ifs.sh  2_nl_between_echo.sh  between.sh  big arg.sh  big_arg.sh  colliding key words.sh  colliding_key_words.sh  comment: not first.sh  comment_not_first.sh  complex_cd.sh  double.sh  double_pipe.sh  double_quote_at_the_end.sh  double_quote_at_the_start.sh  double_quotes_with_escaped_double_quote.sh  double_quotes_with_escaped_tab.sh  double_quotes_with_single_quotes_inside.sh  echo mix options 2.sh  echo_mix_options_2.sh  embedded ifs 1.sh  embedded ifs 2.sh  embedded_ifs_1.sh  embedded_ifs_2.sh  empty quotes.sh  empty single quotes.sh  empty_quotes.sh  exit_if.sh  if and command.sh  if false else.sh  if false.sh  if true else.sh  if_and_command.sh  if_false.sh  if_false_else.sh  if_true_else.sh  is.sh  many_args.sh  mix of single and double quotes.sh  (+37 more)
tests/categories/tmp/: tmp.sh
