TESTS= \
	./categories/echo/command1.sh \
	./categories/echo/command2.sh \
	./categories/echo/command3.sh \
	./categories/echo/fail.sh \
	./categories/echo/input1.sh \
	./categories/echo/input2.sh \
	./categories/echo/input3.sh \
	./categories/echo/input4.sh \
	./categories/echo/inputlots.sh \
	./categories/true_false/true.sh \
	./categories/true_false/false.sh \
	./categories/if_else/input1.sh \
	./categories/if_else/input2.sh \
	./categories/if_else/input3.sh \
	./categories/if_else/inputtricky.sh

XFAIL_TESTS= \
	./categories/echo/fail.sh

check-local:
