TESTS= \
	./categories/echo/command1.sh \
	./categories/echo/command2.sh \
	./categories/echo/command3.sh \
	./categories/echo/fail.sh \
	./categories/echo/input1.sh \
	./categories/echo/input2.sh \
	./categories/echo/input3.sh \
	./categories/echo/input4.sh \
	./categories/echo/inputlots.sh \
	./categories/true_false/true.sh \
	./categories/true_false/false.sh \
	./categories/if_else/input1.sh \
	./categories/if_else/input2.sh \
	./categories/if_else/input3.sh \
	./categories/if_else/inputtricky.sh \
	./categories/while_until/input1.sh \
	./categories/mass_produce/'2 ifs.sh' \
	./categories/mass_produce/'2 nl between echo.sh' \
	./categories/mass_produce/'between.sh' \
	./categories/mass_produce/'big arg.sh' \
	./categories/mass_produce/'colliding key words.sh' \
	./categories/mass_produce/'comment: not first.sh' \
	./categories/mass_produce/'double.sh' \
	./categories/mass_produce/'echo mix options 2.sh' \
	./categories/mass_produce/'embedded ifs 1.sh' \
	./categories/mass_produce/'embedded ifs 2.sh' \
	./categories/mass_produce/'empty quotes.sh' \
	./categories/mass_produce/'empty single quotes.sh' \
	./categories/mass_produce/'if and command.sh' \
	./categories/mass_produce/'if false else.sh' \
	./categories/mass_produce/'if false.sh' \
	./categories/mass_produce/'if true else.sh' \
	./categories/mass_produce/'is.sh' \
	./categories/mass_produce/'many_args.sh' \
	./categories/mass_produce/'mix of single and double quotes.sh' \
	./categories/mass_produce/'multiple quotes.sh' \
	./categories/mass_produce/'non existant.sh' \
	./categories/mass_produce/'pipe.sh' \
	./categories/mass_produce/'quote.sh' \
	./categories/mass_produce/"quotes inside.'.sh" \
	./categories/mass_produce/'quotes.sh' \
	./categories/mass_produce/'simple quote.sh' \
	./categories/mass_produce/'simple seq.sh' \
	./categories/mass_produce/'simple single quotes.sh' \
	./categories/mass_produce/'single quote at the end.sh' \
	./categories/mass_produce/'single quote at the start.sh' \
	./categories/mass_produce/'single quotes with escaped single quote.sh' \
	./categories/mass_produce/'single quotes with escaped tab.sh' \
	./categories/mass_produce/'spaces as args.sh' \
	./categories/mass_produce/'spaces between single quotes.sh'

XFAIL_TESTS= \
	./categories/echo/fail.sh

check-local:
